
start_module_group(rostests)

add_subdirectory(apitests)
#add_subdirectory(dibtests)
add_subdirectory(drivers)
#add_subdirectory(dxtest)
add_subdirectory(kmtests)
#add_subdirectory(regtests)
add_subdirectory(rosautotest)
add_subdirectory(tests)
#add_subdirectory(win32)
add_subdirectory(winetests)

end_module_group()
